--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,16 @@ body{
 .btn-primary:hover{
     background-color: var(--primary-hover);
 }
+
+.mt-1{
+    margin-top: 1rem !important;
+}
+.ml-1{
+    margin-left: 1rem !important;
+}
+.mr-1{
+    margin-right: 1rem !important;
+}
+.mb-1{
+    margin-bottom: 1rem !important;
+}
